# logger

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  config.h.in  emacs.el  logger.cpp  logger.h  logger.pc  loggerConfig.h.in
debian/: changelog  control  copyright  rules
nbproject/: Makefile-Debug.mk  Makefile-DebugStatic.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-DebugStatic.bash  Package-Release.bash  configurations.xml  project.xml
